# myProject-DZ-2

./: Dockerfile  PKG-INFO.txt  pyproject.toml  requirements.txt  setup.py  Диаграмма Для NoteBook.drawio  Диаграмма без названия.drawio
assistant/: Main_menu.py  address_book.py  arrange_dir.py  main_address_book.py  main_note.py  notebook_classes.py  test_notebook.py
