[tool.poetry]
name = "the-soft-1-0-4"
version = "0.1.0"
description = ""
authors = ["Greezli439 <115574069+Greezli439@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "the_soft_1"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

